--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ paginate: 100
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [
+  _posts/2020-01-22-template.md,
   README.md,
   package.json,
   grunt.js,
