implement category archives like til.cimarron.io:

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ logo_full: 'assets/images/logo.png'
 favicon: 'assets/images/icon.ico'
 baseurl: '/'
 email: 'sergio@cimarron.io'
+homeurl: 'https://cimarron.io/'
 
 include: ["_pages"]
 permalink: /:title/
@@ -17,6 +18,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jekyll-seo-tag
+  - jekyll-archives
  
 # Defaults
 defaults:
@@ -52,3 +54,10 @@ exclude: [
   Gruntfile.coffee,
   node_modules
 ]
+
+# Archives
+jekyll-archives:
+  enabled: ['categories']
+  layout: archive
+  permalinks:
+category: '/category/:name/'
