updates and typos

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: 'Cimarrón IO'
+name: 'datasettes'
 description: 'Imaginemos cosas chingonas.'
 logo: 'assets/images/logo.png'
 logo_full: 'assets/images/logo.png'
